--- a/DITA/topics/ch_fonts.dita
+++ b/DITA/topics/ch_fonts.dita
@@ -12,7 +12,7 @@
   <topic id="ch_supported_fonts">
     <title>Supported Fonts</title>
     <body>
-      <p><ph keyref="product"/> supports TTF fonts, either as local files or as web fonts, with the
+      <p>Oxygen PDF Chemistry supports TTF fonts, either as local files or as web fonts, with the
         following limitations: <ul id="ol_i2x_ys5_cbb">
           <li>Some fonts may use features that are unsupported, such as the
               <codeph>MarkGlyphSet</codeph> in the GDEF table.</li>
@@ -35,29 +35,6 @@
       </ul>
     </body>
   </topic>
-  <topic id="ch_using_web_fonts">
-    <title>Using Web Fonts</title>
-    <prolog>
-      <metadata>
-        <keywords>
-          <indexterm>Web fonts</indexterm>
-        </keywords>
-      </metadata>
-    </prolog>
-    <body>
-      <p>If the font is available from a website (such as <xref href="https://fonts.google.com/"
-          format="html" scope="external"/>), all you need to do is to select the font, along with
-        its font weights and insert the generated <codeph>@import</codeph> declaration in your
-        CSS:<codeblock outputclass="language-css">@import url('https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,500,700i');
-
-section h2 {
-    font-family: Montserrat, Serif;
-    font-weight:500;
-}</codeblock></p>
-      <note>You might consider adding a fallback to the remote font (<codeph>Serif</codeph> in the
-        above example).</note>
-    </body>
-  </topic>
   <topic id="ch_using_installed_fonts_0">
     <title>Using Installed Fonts</title>
     <body>
@@ -74,14 +51,14 @@ section h2 {
     <body>
       <section id="section_ycd_yrt_cbb">
         <title>Font Files from a Directory</title>
-        <p>If you have your font files located in a directory, you can instruct <ph keyref="product"
-          /> to load them. Use the <codeph>-fonts-dir</codeph> command line argument. In this case,
+        <p>If you have your font files located in a directory, you can instruct Oxygen PDF Chemistry
+          to load them. Use the <codeph>-fonts-dir</codeph> command line argument. In this case,
           just specify the name of the font directly in the <codeph>font-family</codeph> property,
           as you would for the built-in fonts. There is no need to define a
             <codeph>@font-face</codeph> in the CSS.</p>
       </section>
       <section id="font_files_from_the_installation">
-        <title>Font Files from the <ph keyref="product"/> Installation</title>
+        <title>Font Files from the Oxygen PDF Chemistry Installation</title>
         <p>Another way is to copy your font files in the following subfolder:
             <filepath>[CHEMISTRY_INSTALL_DIR]/config/fonts</filepath>. In this case, there is no
           need to define a <codeph>@font-face</codeph> in the CSS, just specify the name of the font
@@ -147,16 +124,16 @@ section h2 {
       <section id="section_m2z_kkd_5z">
         <title>CSS Font Embedding</title>
         <p>All the font families that are referenced from the CSS <b>are embedded automatically</b>
-          in the PDF by <ph keyref="product"/>.</p>
+          in the PDF by Oxygen PDF Chemistry.</p>
       </section>
       <section id="section_ohr_3ld_xz">
         <title id="title_ux1_lld_xz">Basic Fonts Embedding</title>
         <p>Although the basic fonts are guaranteed to be available in all PDF readers, there are
           some situations where you will have to embed them explicitly when using PDF/Universal
           Accessibility or Archiving. Because there are some copyright restrictions on these fonts,
-            <ph keyref="product"/> cannot redistribute them. You will have to locate the files on
-          your system and declare a set of font faces with the same name as the default ones, as in
-          the following example.</p>
+          Oxygen PDF Chemistry cannot redistribute them. You will have to locate the files on your
+          system and declare a set of font faces with the same name as the default ones, as in the
+          following example.</p>
         <note>The following stylesheet assumes the fonts are placed in a <filepath>fonts</filepath>
           directory next to the stylesheet. The names of the fonts may differ on your
           platform.</note>
